--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
